# deeplearning-tutorial

./: requirements.txt
agentic-sales-pipeline/: main.py
automated-project-planning/: main.py
conda/support_data_insight_analysis/: README.md  pyproject.toml  report.md
conda/support_data_insight_analysis/src/support_data_insight_analysis/: crew.py  main.py
conda/support_data_insight_analysis_2/: agent_performance.csv  customer_satisfaction.csv  issue_distribution.csv  priority_levels.csv  pyproject.toml  report.md  training_data.pkl
conda/support_data_insight_analysis_2/src/support_data_insight_analysis_2/: crew.py  main.py
conda/support_data_insight_analysis_2/src/support_data_insight_analysis_2/config/: agents.yaml  tasks.yaml
sales-pipeline-plot-test/: main.py
support-data-insight-analysis/: main.py
support_data_insight_analysis_2/: README.md  report.md
support_data_insight_analysis_2/src/support_data_insight_analysis_2/: crew.py  main.py
