[project]
name = "support_data_insight_analysis"
version = "0.1.0"
description = "support-data-insight-analysis using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
support_data_insight_analysis = "support_data_insight_analysis.main:run"
run_crew = "support_data_insight_analysis.main:run"
train = "support_data_insight_analysis.main:train"
replay = "support_data_insight_analysis.main:replay"
test = "support_data_insight_analysis.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
