[project]
name = "support_data_insight_analysis_2"
version = "0.1.0"
description = "support-data-insight-analysis-2 using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
support_data_insight_analysis_2 = "support_data_insight_analysis_2.main:run"
run_crew = "support_data_insight_analysis_2.main:run"
train = "support_data_insight_analysis_2.main:train"
replay = "support_data_insight_analysis_2.main:replay"
test = "support_data_insight_analysis_2.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
